--- a/appList.html
+++ b/appList.html
@@ -33,7 +33,7 @@
 <div class="MsoNormal">
     
     <ul>
-      <a-app1 title="https://800aa.co/wmc-ams/api/app/access?appId=1668289177655054336&test=true"><i title="bovada slotss"></i></a-app1>
+      <a-app1 title="https://800aa.co/wmc-ams/api/app/access?appId=1668289177655054336"><i title="bovada slotss"></i></a-app1>
      
     </ul>
 </div>
